# six_jupyter_notebook

./: .gitignore  DataRetrieval.ipynb  README.md  pyproject.toml
examples/: DataRetrieval.ipynb
examples/.ipynb_checkpoints/: DataRetrieval-checkpoint.ipynb
src/six_tools/: Loc_Funcs.py  six_plot.py
