[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "six-tools"
version = "0.1.0"

dependencies = [
  "scipy",
  "pandas",
  "prettytable",
  "h5py",
  "databroker",
  "matplotlib",
  "ipywidgets",
  "IPython"
]

exclude = '''

(
  /(
    | \.git
    | \.pycache
    | \.venv
  )/
)
'''
